[b]Version 0.6.2[/b]:

(2008-06-03)
 * Added the possibility to compile smplayer in Windows without the
   file associations code, so it doesn't write anything in the 
   registry (important for a portable app). Just comment the line
   DEFINES += USE_ASSOCIATIONS in smplayer.pro.
 * Another fix for Qt 4.4. The language toolbar wasn't restored
   properly.
   
(2008-06-02)
 * Now the controlbar and floating control in the minigui can be 
   configured too.
 * Some minor (and internal) changes:
    - the playlist doesn't save its size as that is already done by 
      QMainWindow::saveState()
    - sizes and positions are saved to the config file as QSize's and
      QPoint's

(2008-06-01)
 * (Bugfix) The "modify shortcut" dialog was under the other windows if
   the option Video -> Stay on top was enabled.
 * Started to write the code to make the toolbars configurable:
    - the list of actions in a widget can be saved to the config file
    - a widget can be populated with the actions read from the config file 
    - as a test the toolbar1, controlwidget and controlwidget_mini in 
      defaultgui are saved to the config and loaded on startup

(2008-05-30)
 * The maximum port for the single instance is 65535, instead of 99999.
 * Added a new option in guiconfig.h, USE_MINIMUMSIZE. If set to 1
   the main window will not be smaller than the control widget size hint.


[b]Version 0.6.1[/b]:

(2008-05-26)
 * The command line option -mini has been renamed to -minigui (-mini still 
   works)
 * Added a new command line option -defaultgui, which selects the default
   gui.
 * Added an option in Preferences->Interface to select the preferred GUI.
   This option is not applied immediately, you need to close smplayer and
   open it again.
   Note: the command line options -minigui and -defaultgui have preference 
   over this option.

(2008-05-25)
 * Some internal changes: baseguiplus saves some variables to the config